Changes -> added ResponseManager